--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,31 @@
 services:
-  app:
-    build:
+  api:
+    container_name: transactions-api
+    build: 
       context: .
       dockerfile: Dockerfile
-    container_name: transaction-api
-    restart: unless-stopped
-    environment:
-      APP_PORT: ${APP_PORT}
-      NODE_ENV: ${NODE_ENV}
     ports:
       - "7000:3000"
+    environment:
+      NODE_ENV: ${NODE_ENV}
+      APP_PORT: ${APP_PORT}
+    restart: unless-stopped
   prometheus:
     container_name: prometheus
     image: prom/prometheus:latest
     volumes:
-      - ./prometheus:/etc/prometheus/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus_data:/prometheus
     ports:
       - "9090:9090"
-    depends_on:
-      - app	
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
     restart: unless-stopped
+
 
   grafana:
     container_name: grafana
@@ -27,7 +33,8 @@ services:
     ports:
       - "3001:3000"
     volumes:
-      - grafana-data:/var/lib/grafana
+      - ./grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/:/etc/grafana/provisioning/
     depends_on:
       - prometheus
     restart: unless-stopped
@@ -36,4 +43,5 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
 
 volumes:
-  grafana-data:
+  prometheus:
+  grafana_data:
