--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "class-validator": "^0.14.2",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
